data/derived/comb/progs/unify/prog2675.ml.out
Characters 28-29:
  let _ = bigMul [9;9;9;9;9] [9;9;9;9;9];;
                              ^
Error: This expression has type int but an expression was expected of type
         int list
